# vulkan-guide

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
learning/: CMakeLists.txt  vk_engine.cpp  vk_engine.h
shaders/: colored_triangle_mesh.vert  gradient.comp  mesh.vert
src/: camera.cpp  camera.h  vk_descriptors.cpp  vk_descriptors.h  vk_engine.cpp  vk_engine.h  vk_images.cpp  vk_images.h  vk_initializers.cpp  vk_loader.cpp  vk_loader.h  vk_pipelines.cpp  vk_pipelines.h  vk_types.h
